fix: back button was behind bottom div

--- a/public/css/create-polygon.css
+++ b/public/css/create-polygon.css
@@ -11,11 +11,12 @@ body{
 aside{
   width: 80px;
   height: 100%;
-  position: relative;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;  
+  z-index: 2;
+  padding-bottom: 2rem;
 }
 
 aside a {
@@ -31,14 +32,6 @@ aside a {
   justify-content: center;
 
   margin-left: 10px;
-}
-
-aside a div{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 #container{  
